# BDA_MLPipeline

./: .env  README.md  data_ingestion_and_trans_example.py  docker-compose.yaml  electricity_ingestion.py  pyproject.toml
airflow/: .env  Dockerfile  requirements.txt
airflow/dags/: data_ingestion.py  mlpipeline.py
airflow/dags/analysis_tasks/: task3.py
airflow/dags/data_analysis/: __init__.py  exp1_DA.py  exp2_DA.py  exp3_DA.py
airflow/dags/exploitation/: __init__.py  air_electricity_weather.sql  trafficAcc_weather.sql  weather_electricity.sql
airflow/dags/formatting/: __init__.py  air_quality_FR.py  electricity_FR.py  electricity_FR_pcmarta.py  traffic_acc_FR.py  weather_FR.py
airflow/dags/landing/: __init__.py  air_quality_DL.py  class_types.py  electricity_DL.py  traffic_acc_DL.py  weather_DL.py
airflow/dags/quality/: __init__.py  air_quality_QL.py  electricity_QL.py  electricity_QL_pcmarta.py  quality_utils.py  traffic_acc_QL.py  weather_QL.py
airflow/dags/utils/: __init__.py  air_quality_DL.py  class_types.py  electricity_DL.py  hdfs_utils.py  other_utils.py  postgres_utils.py  traffic_acc_DL.py  weather_DL.py
data/: electricity_data_2019-01-01T00_2024-03-31T00.json  electricity_data_2019-01-01_2024-03-31.json
data_loaders/: air_quality_DL.py  class_types.py  data_loader_electricity.py  data_loader_weather.py  electricity_DL.py  traffic_acc_DL.py  weather_DL.py
exemples/: electricity_ingestion.py
postgres-init/: init.sql
streamlit-app/: Dockerfile  app.py  db.py  experiment1.py  requirements.txt  utils.py
(+26 files in other folders)
