[tool.poetry]
name = "bda-mlpipeline"
version = "0.1.0"
description = ""
authors = ["jordigb4 <jordi.granja.bayot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dotenv = "^0.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
